--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/TheInfamousGrim/NoSQL-Social-Network-API/issues"
   },
-  "homepage": "https://github.com/TheInfamousGrim/NoSQL-Social-Network-API#readme"
+  "homepage": "https://github.com/TheInfamousGrim/NoSQL-Social-Network-API#readme",
+  "dependencies": {
+    "dayjs": "^1.11.6",
+    "express": "^4.18.2",
+    "mongoose": "^6.7.4"
+  }
 }
