Create User model for user data
Created ODM model for users.

Data includes:
    - username
    - email
    - thoughts "basically a text post by a user"
    - friends "an array of friends"
    - virtual data that will return the number of friends a user has.

--- a/variables.env.example
+++ b/variables.env.example
@@ -1,1 +1,1 @@
-DATABASE=mongodb://user:pass@host.com/database
+DATABASE=mongodb+srv://TheInfamousGrim:<password>@cluster0.u0qontc.mongodb.net/?retryWrites=true&w=majority
