--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/TheInfamousGrim/NoSQL-Social-Network-API#readme",
   "dependencies": {
     "dayjs": "^1.11.6",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.4"
   }
